[metadata]
name = horizon_contrib
summary = Horizon Django tools.
description-file =
    README.rst
author = Michael Kuty
author-email = mail@majklk.cz
home-page = https://github.com/michaelkuty/horizon-contrib
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    horizon_contrib

[extras_require]
horizon = -r requirements/horizon.txt

[nosetests]
where = horizon_contrib/tests

[build_sphinx]
source-dir = docs/
build-dir = docs/.build
all_files = 1

[upload_sphinx]
upload-dir = docs/.build/html
